--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Local environment
+.DS_Store
+Thumbs.db
+
+# Vagrant
+.vagrant
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
