reorganized files into folders

--- a/playbooks/python.yaml
+++ b/playbooks/python.yaml
@@ -19,6 +19,6 @@
 
   - name: Install Python requirements into the specified (virtualenv)
     pip:
-      requirements: /vagrant/requirements.txt
+      requirements: /vagrant/app/requirements.txt
       virtualenv: /home/vagrant/venv
       virtualenv_command: /usr/bin/python3 -m venv      
